apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__fragment_reuse.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: response
---
{
  "data": {
    "me": {
      "name": "Ada",
      "organizations": [
        {
          "id": "2",
          "name": "Apollo"
        }
      ]
    }
  }
}
