apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__interface_object_typename2.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "searchContacts": [
      {
        "__typename": "Person",
        "country": "Fr"
      }
    ]
  }
}
