apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__invalid_input_enum-2.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: response
---
{
  "errors": [
    {
      "message": "invalid variable `$input`: found JSON string for GraphQL type `InputEnum`",
      "extensions": {
        "name": "input",
        "code": "VALIDATION_INVALID_TYPE_VARIABLE"
      }
    }
  ]
}
