apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__invalid_input_enum.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: response
---
{
  "errors": [
    {
      "message": "Value \"C\" does not exist in \"InputEnum\" enum.",
      "locations": [
        {
          "line": 1,
          "column": 21
        }
      ],
      "extensions": {
        "code": "GRAPHQL_VALIDATION_FAILED"
      }
    }
  ]
}
