apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__invalid_input_enum_inaccessible_value.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: response
snapshot_kind: text
---
{
  "errors": [
    {
      "message": "invalid variable `$tier`: found JSON string for GraphQL type `PartnerTier!`",
      "extensions": {
        "name": "tier",
        "code": "VALIDATION_INVALID_TYPE_VARIABLE"
      }
    }
  ]
}
