apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__invalid_input_object_unknown_field@strict_variable_validation_measure.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: response
---
{
  "data": null,
  "errors": [
    {
      "message": "subgraph mock not configured",
      "path": [],
      "extensions": {
        "code": "SUBGRAPH_MOCK_NOT_CONFIGURED",
        "service": "users"
      }
    }
  ]
}
